--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
           <g fill="none" fill-rule="evenodd">
               <rect width="61" height="31" x="14" y="3" fill="#000000" rx="8"/>
               <rect class="clock-front" width="61" height="31" y="3" fill="#151515" rx="8"/>
-              <text textLength="45" x="8" y="23" fill="#17CBF6" font-family="Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace" font-size="17">
-                  03:00
+              <text textLength="45" x="8" y="23" fill="#17CBF6" font-family="Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace" font-size="17" id="timeId">
+               
               </text>
               <g transform="translate(21)">
                   <mask id="clock-b" fill="white">
