--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
   <!-- play -->
     <div id="divPlay">
-      <button type="button" class="atras" id="playAtras">Atrás</button>
+      <button id = "playAtras" class="button-back">&#8249;</button>
     </div>
 
 <!-- trabajar -->
 <div id="divTrabajar">
-  <div class="container">
-    <button type="button" class="atras" id="trabajarAtras">Atrás</button>
+  <button id = "trabajarAtras" class="button-back">&#8249;</button>
+  <div class="container">  
     <svg id="bongo-cat" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 787.3 433.8">
       <defs>
         <symbol id="eye" data-name="eye" viewBox="0 0 19.2 18.7">
@@ -167,6 +167,7 @@
 <!-- pasear -->
 
 <div id="divPasear">
+  <button id = "pasearAtras" class="button-back">&#8249;</button>
   <div id="hachi">
     <div id="cielo"></div>
     <div id="luna"></div>
@@ -174,7 +175,6 @@
     <div id="muro"></div>
     <div id="edificios"></div>
   </div>
-  <button type="button" class="atras" id="pasearAtras">Atrás</button>
 </div>
 
 
@@ -182,6 +182,7 @@
 <!-- dormir -->
 
 <div id="divDormir">
+  <button id = "dormirAtras" class="button-back">&#8249;</button>
   <div class="containerDormir">
 <div class="bedroom">
   <div class="nightstand">
@@ -402,7 +403,6 @@
   </div>
 </div>
 </div>
-<button type="button" class="atras" id="dormirAtras">Atrás</button>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
